# repocard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
repocard/: __init__.py  api.py  cli.py  colors.py  render.py
tests/: test_batch.py  test_render.py  test_serve.py
